bk_ida/gobmkida/c3/fastlib
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/fastlib/src/engine/board.c:1980:24: error: use of undeclared identifier 'byte_9C689F'
v8 = ( unsigned __int8)byte_9C689F[pos]; 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/fastlib/src/engine/board.c:1983:25: error: use of undeclared identifier 'byte_9C688C'
v10 = ( unsigned __int8)byte_9C688C[( _QWORD)v5]; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/fastlib/src/engine/board.c:1997:25: error: use of undeclared identifier 'byte_9C688C'
v10 = ( unsigned __int8)byte_9C688C[( _QWORD)v5]; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/fastlib/src/engine/board.c:2031:24: error: use of undeclared identifier 'byte_9C689E'
&& ( ( unsigned __int8)byte_9C689E[( _QWORD)v5] != color || string[239].neighborlist[( _QWORD)v5 + 159] != v7) 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/fastlib/src/engine/board.c:2040:24: error: use of undeclared identifier 'byte_9C688D'
&& ( ( unsigned __int8)byte_9C688D[( _QWORD)v5] != color || string[239].neighborlist[( _QWORD)v5 + 142] != v7) 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/fastlib/src/engine/board.c:2048:24: error: use of undeclared identifier 'byte_9C688D'
&& ( ( unsigned __int8)byte_9C688D[( _QWORD)v5] != color || string[239].neighborlist[( _QWORD)v5 + 142] != v7) ) 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/fastlib/src/engine/board.c:2078:25: error: use of undeclared identifier 'byte_9C689E'
v29 = ( unsigned __int8)byte_9C689E[( _QWORD)v5]; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/fastlib/src/engine/board.c:2100:25: error: use of undeclared identifier 'byte_9C688D'
v33 = ( unsigned __int8)byte_9C688D[( _QWORD)v5]; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/fastlib/src/engine/board.c:2122:25: error: use of undeclared identifier 'byte_9C688D'
v37 = ( unsigned __int8)byte_9C688D[( _QWORD)v5]; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/fastlib/src/engine/board.c:2146:24: error: use of undeclared identifier 'byte_9C689F'
v8 = ( unsigned __int8)byte_9C689F[pos]; 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/fastlib/src/engine/board.c:2150:25: error: use of undeclared identifier 'byte_9C688C'
v10 = ( unsigned __int8)byte_9C688C[( _QWORD)v5]; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/fastlib/src/engine/board.c:2174:25: error: use of undeclared identifier 'byte_9C688C'
v10 = ( unsigned __int8)byte_9C688C[( _QWORD)v5]; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/fastlib/src/engine/board.c:2201:30: error: use of undeclared identifier 'byte_9C689F'
|| ( v39 = ( unsigned __int8)byte_9C689F[( _QWORD)v14], v39 == color) 
                             ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/fastlib/src/engine/board.c:2203:30: error: use of undeclared identifier 'byte_9C688C'
|| ( v40 = ( unsigned __int8)byte_9C688C[( _QWORD)v14], v40 == color) 
                             ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/fastlib/src/engine/board.c:2228:30: error: use of undeclared identifier 'byte_9C689F'
|| ( v45 = ( unsigned __int8)byte_9C689F[( _QWORD)v42], v45 == color) 
                             ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/fastlib/src/engine/board.c:2230:30: error: use of undeclared identifier 'byte_9C688C'
|| ( v46 = ( unsigned __int8)byte_9C688C[( _QWORD)v42], v46 == color) 
                             ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/fastlib/src/engine/board.c:2253:30: error: use of undeclared identifier 'byte_9C689F'
|| ( v53 = ( unsigned __int8)byte_9C689F[( _QWORD)v48], v53 == color) 
                             ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/fastlib/src/engine/board.c:2255:30: error: use of undeclared identifier 'byte_9C688C'
|| ( v54 = ( unsigned __int8)byte_9C688C[( _QWORD)v48], v54 == color) 
                             ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/fastlib/src/engine/board.c:2274:25: error: use of undeclared identifier 'byte_9C689F'
v59 = ( unsigned __int8)byte_9C689F[( _QWORD)v56]; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/fastlib/src/engine/board.c:2277:25: error: use of undeclared identifier 'byte_9C688C'
v60 = ( unsigned __int8)byte_9C688C[( _QWORD)v56]; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/fastlib/src/engine/board.c:2347:22: error: use of undeclared identifier 'byte_9C689F'
|| ( unsigned __int8)byte_9C689F[( _QWORD)v14] == color 
                     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/fastlib/src/engine/board.c:2349:22: error: use of undeclared identifier 'byte_9C688C'
|| ( unsigned __int8)byte_9C688C[( _QWORD)v14] == color 
                     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/fastlib/src/engine/board.c:2379:22: error: use of undeclared identifier 'byte_9C689F'
|| ( unsigned __int8)byte_9C689F[( _QWORD)v64] == color 
                     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/fastlib/src/engine/board.c:2381:22: error: use of undeclared identifier 'byte_9C688C'
|| ( unsigned __int8)byte_9C688C[( _QWORD)v64] == color 
                     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/fastlib/src/engine/board.c:2452:24: error: use of undeclared identifier 'byte_9C689F'
&& ( ( unsigned __int8)byte_9C689F[( _QWORD)v67] != color || string[239].neighborlist[( _QWORD)v67 + 160] != v9) 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/fastlib/src/engine/board.c:2453:24: error: use of undeclared identifier 'byte_9C688C'
&& ( ( unsigned __int8)byte_9C688C[( _QWORD)v67] != color || string[239].neighborlist[( _QWORD)v67 + 141] != v9) 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/fastlib/src/engine/board.c:2478:24: error: use of undeclared identifier 'byte_9C689F'
&& ( ( unsigned __int8)byte_9C689F[( _QWORD)v69] != color || string[239].neighborlist[( _QWORD)v69 + 160] != v9) 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/fastlib/src/engine/board.c:2479:24: error: use of undeclared identifier 'byte_9C688C'
&& ( ( unsigned __int8)byte_9C688C[( _QWORD)v69] != color || string[239].neighborlist[( _QWORD)v69 + 141] != v9) 
                       ^
28 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/fastlib/src/obj/1/board.o] Error 1
